style: Fix some more low severity code issues (#1111)